--- a/app/templates/creport.html
+++ b/app/templates/creport.html
@@ -43,6 +43,6 @@
     </div>
   </main>
   </div>
-  <script type="module" src="{{ url_for('static', filename='js/cyberreport.js')}}" type="image/x-icon"></script>
+  <script type="module" src="{{ url_for('static', filename='js/creport.js')}}" type="image/x-icon"></script>
 </body>
 </html>
