--- a/app/templates/cyberhistroy.html
+++ b/app/templates/cyberhistroy.html
@@ -63,6 +63,6 @@
       </div>
     </main>
   </div>
-  <script src="history.js"></script>
+  <script type="module" src="{{ url_for('static', filename='js/cyberhistory.js')}}" type="image/x-icon"></script>
 </body>
 </html>
