--- a/app/templates/cyber.html
+++ b/app/templates/cyber.html
@@ -15,7 +15,7 @@
       <h2>Imposter</h2>
       <ul>
         <li><i class="fas fa-home"></i><a href="index.html"> Dashboard</a></li>
-        <li><i class="fas fa-flag"></i> <a href="report.html" id="cyberreport">Reported Accounts</a></li>
+        <li><i class="fas fa-flag"></i> <a href="/puru" id="cyberreport">Reported Accounts</a></li>
         <li><i class="fas fa-history"></i> <a href="history.html">History</a></li>
       </ul>
     </div>
