updated and connected

--- a/app/templates/cyberreport.html
+++ b/app/templates/cyberreport.html
@@ -4,18 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Account Investigation Cards</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/cyber.css') }}" />
+    <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/cyber.css') }}" />
 </head>
 <body>
   <div class="container">
     <div class="sidebar">
         <h2>Imposter</h2>
         <ul>
-          <li><i class="fas fa-home"></i><a href="index.html"> Dashboard</a></li>
-          <li><i class="fas fa-flag"></i> <a href="{{ url_for('templates', filename='report.html')}}">Reported Accounts</a></li>
-          <li><i class="fas fa-history"></i> <a href="history.html">History</a></li>
+            <li><i class="fas fa-home"></i><a href="#" id="cyber"> Dashboard</a></li>
+            <li><i class="fas fa-flag"></i> <a href="#" id="cyberreport">Reported Accounts</a></li>
+            <li><i class="fas fa-history"></i> <a href="#" id="cyberhistory">History</a></li>
         </ul>
         <button id="add-card-btn">Add New Account</button>
     </div>
@@ -43,6 +43,6 @@
     </div>
   </main>
   </div>
-  <script type="module" src="{{ url_for('static', filename='js/creport.js')}}" type="image/x-icon"></script>
+  <script type="module" src="{{ url_for('static', filename='js/cyberreport.js')}}" type="image/x-icon"></script>
 </body>
 </html>
