--- a/app/templates/cyber.html
+++ b/app/templates/cyber.html
@@ -14,9 +14,9 @@
     <div class="sidebar">
       <h2>Imposter</h2>
       <ul>
-        <li><i class="fas fa-home"></i><a href="index.html"> Dashboard</a></li>
-        <li><i class="fas fa-flag"></i> <a href="/puru" id="cyberreport">Reported Accounts</a></li>
-        <li><i class="fas fa-history"></i> <a href="history.html">History</a></li>
+        <li><i class="fas fa-home"></i><a href="#" id="cyber"> Dashboard</a></li>
+        <li><i class="fas fa-flag"></i> <a href="#" id="cyberreport">Reported Accounts</a></li>
+        <li><i class="fas fa-history"></i> <a href="#" id="cyberhistory">History</a></li>
       </ul>
     </div>
     <div class="toggle-button" onclick="toggleSidebar()" style="display:none;">
