instagram and x done

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -69,19 +69,19 @@
 
       <div class="flexSocialMedia">
 
-        <div class="socialLogo" id="instagramLogo">
+        <div class="socialLogo " id="instagramLogo" data-platform="Instagram" value="detect_fraud_profile">
           <img class="socialIcon" src="../static/images/instagram.png" alt="">
         </div>
 
-        <div class="socialLogo" id="facebookLogo">
+        <div class="socialLogo" id="facebookLogo" data-platform="Facebook" value="detect_fb">
           <img  class="socialIcon" src="../static/images/facebook.png" alt="">
         </div>
 
-        <div class="socialLogo" id="twitterLogo">
+        <div class="socialLogo" id="twitterLogo" data-platform="Twitter" value="detect_x">
           <img  class="socialIcon" src="../static/images/twitter.png" alt="">
         </div>
 
-        <div class="socialLogo" id="linkedinLogo">
+        <div class="socialLogo" id="linkedinLogo" data-platform="LinkedIn" value ="linkdin">
           <img  class="socialIcon" src="../static/images/linkedin.png" alt="">
         </div>
 
