--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -109,6 +109,8 @@
 
 
   <script type="module" src="{{ url_for('static', filename='js/script.js')}}" type="image/x-icon"></script>
+  <script type="module" src="{{ url_for('static', filename='js/data.js')}}" type="image/x-icon"></script>
+
 </body>
 
 </html>
