--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -101,6 +101,8 @@
       </select>
 
       <button id="btnStart">Start Test</button>
+      <button id="btnreport"  style="background-color: rgb(216, 70, 70);">Report</button>
+      
 
     </div>
     <div id="progressData" class="progressData"></div>
