--- a/app/templates/reports.html
+++ b/app/templates/reports.html
@@ -8,7 +8,7 @@
 
   <script src="https://kit.fontawesome.com/6cc1a5eb9c.js" crossorigin="anonymous"></script>
 
-  <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" />
+  
   <link rel="stylesheet" href="{{ url_for('static', filename='css/reports.css') }}" />
 
   <link rel="shortcut icon" href="{{ url_for('static', filename='images/appLogo.png')}}" type="image/x-icon" />
@@ -44,40 +44,36 @@
       <a class="aM" href="#">Reports</a>
       <i id="modeColor" class="fa-solid fa-moon"></i>
 
-      <div class="creditBalance">
-        <p class="creditB">30</p>
-
-        <img class="creditI" src="{{ url_for('static', filename='images/credits.png')}}" alt="">
-      </div>
-
     </div>
 
     <button id="signupButton">Get Started</button>
   </div>
 <div class="reportd">
- <div class="usersurvey">
-    <h1>Reported account Details </h1>
-    <div class="reportdetail">
-        <h3>Puru Singh</h3>
-        <h5>60%</h5>
-    </div>
-    <div class="reportdetail">
-        <h3>Pratiksha Pandey</h3>
-        <h5>80%</h5>
-    </div>
-    <div class="reportdetail">
-        <h3>Rishabh kukdeja</h3>
-        <h5>60%</h5>
-    </div>
- </div>
- <div class="graph">
-    <h1>Daily report</h1>
- </div> 
+  <div class="container">
+    <input type="text" id="searchBar" placeholder="Search for Accounts" onkeyup="filterTable()">
+    <button class="filter-btn">Filter</button>
+    <table id="dataTable">
+      <thead>
+        <tr>
+          <th>Date</th>
+          <th>User-id</th>
+          <th>Account Link</th>
+          <th>Status</th>
+          <th>Platform</th>
+        </tr>
+      </thead>
+      <tbody>
+        <!-- Data will be inserted dynamically here -->
+      </tbody>
+    </table>
+  </div>
+
  </div>
 
 
 
   <script type="module" src="{{ url_for('static', filename='js/script.js')}}" type="image/x-icon"></script>
+  <script type="module" src="{{ url_for('static', filename='js/reports.js')}}" type="image/x-icon"></script>
 </body>
 
 </html>
