--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -99,9 +99,11 @@
         <option value="7">Hate Speech Detection Test</option>
         <option value="8">Bot or Automation Test</option>
       </select>
+      <div class="button">
 
       <button id="btnStart">Start Test</button>
       <button id="btnreport"  style="background-color: rgb(216, 70, 70);">Report</button>
+    </div>
       
 
     </div>
