--- a/app/templates/reports.html
+++ b/app/templates/reports.html
@@ -41,13 +41,13 @@
         </div>
       </div>
 
-      <a class="aM" href="#">Reports</a>
+      <a class="aM" id="Reports" href="#">Reports</a>
       <i id="modeColor" class="fa-solid fa-moon"></i>
 
     </div>
 
-    <button id="signupButton">Get Started</button>
   </div>
+
 <div class="reportd">
   <div class="container">
     <input type="text" id="searchBar" placeholder="Search for Accounts" onkeyup="filterTable()">
@@ -71,8 +71,6 @@
  </div>
 
 
-
-  <script type="module" src="{{ url_for('static', filename='js/script.js')}}" type="image/x-icon"></script>
   <script type="module" src="{{ url_for('static', filename='js/reports.js')}}" type="image/x-icon"></script>
 </body>
 
