--- a/app/static/css/reports.css
+++ b/app/static/css/reports.css
@@ -192,7 +192,9 @@ i{
     font-size: large;
     color: var(--darkText);
 }
+
   
   tbody tr:hover {
     background-color: #f1f1f1;
+    color: black;
   }
