--- a/app/templates/cyberhistory.html
+++ b/app/templates/cyberhistory.html
@@ -20,7 +20,7 @@
         <li><i class="fas fa-history"></i> <a href="#" id="cyberhistory">History</a></li>
       </ul>
     </div>
-    <div class="toggle-button" onclick="toggleSidebar()">
+    <div class="toggle-button" onclick="toggleSidebar()" style="display: none;">
       <i class="fas fa-bars"></i>
     </div>
 
