--- a/app/templates/cyberreport.html
+++ b/app/templates/cyberreport.html
@@ -18,7 +18,7 @@
             <li><i class="fas fa-history"></i> <a href="#" id="cyberhistory">History</a></li>
         </ul>
     </div>
-    <div class="toggle-button" onclick="toggleSidebar()">
+    <div class="toggle-button" onclick="toggleSidebar()" style="display: none;">
         <i class="fas fa-bars"></i>
       </div>
   <main class="dashboard" id="report-main">
