--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -25,7 +25,12 @@ body {
     font-family: 'Open Sans';
     overflow: hidden;
 }
-
+#dropdownOtherMenus{
+    display: none;
+}
+#menuIcon{
+    display: none;
+}
 
 ::-webkit-scrollbar {
     display: none;
@@ -221,7 +226,6 @@ i{
 
 .flexSocialMedia{
     display: flex;
-    
    
 }
 
@@ -299,7 +303,7 @@ select{
     outline: none;
     border: none;
     margin-top: 7%;
-    font-size: 17px;
+    font-size: 18px;
     font-family: 'Open Sans';
     background-color: var(--light);
     color: var(--text);
@@ -541,3 +545,124 @@ select:focus{
 }
 
 /* mode output end */
+
+@media screen and (max-width: 1024px) {
+    /* Hide the original otherMenus section */
+    #otherMenus {
+        display: none;
+    }
+
+    /* Menu bar icon next to the logo */
+    #menuIcon {
+        display: block;
+        font-size: 24px;
+        cursor: pointer;
+        margin-right: 10px;
+        background: none;
+        border: none;
+        color: #fff;
+    }
+
+    /* Dropdown menu */
+    #dropdownOtherMenus {
+        display: none; /* Hidden by default */
+        background-color: #f9f9f9;
+        position: absolute;
+        top: 60px; /* Adjust based on your header height */
+        left: 0;
+        width: 100%;
+        box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
+        z-index: 1000;
+    }
+
+    #dropdownOtherMenus a {
+        padding: 12px 16px;
+        display: block;
+        text-align: left;
+        color: #333;
+        text-decoration: none;
+    }
+
+    #dropdownOtherMenus a:hover {
+        background-color: #ddd;
+    }
+
+    /* Close button */
+    #closeDropdown {
+        text-align: right;
+        padding: 10px 16px;
+        background-color: var(--material);
+        color: white;
+        font-size: 18px;
+        cursor: pointer;
+        width: 90%;
+        height: 35px;
+    }
+
+    /* Show the dropdown menu when active */
+    #dropdownOtherMenus.active {
+        display: block;
+        width: 100%;
+        height: 300px;
+    }
+}
+
+@media screen and (max-width: 768px){
+   #signupButton{
+    font-size: small;
+   } 
+   .sideBar{
+    display: none;
+}
+}
+
+@media screen and (max-width: 425px){
+    #signupButton{
+        font-size: small;
+        width: 70px;
+       } 
+   
+   /* .button{
+        display: flex;
+        flex-direction: column;
+    }*/
+    #btnStart{
+        font-size: small;
+        padding: 10px;
+    }
+    #btnreport{
+        font-size: small;
+    }
+    .freeDetection{
+        margin: 10px 10px;
+        width: 90%;
+        height: 350px;
+    }
+    .progressData{
+        margin: 0;
+        width: 90%;
+        height: 200px;
+    }
+    .flexFreeDetection {
+    display: flex;
+    width: 100%;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    overflow: auto;
+    
+}
+select{
+    font-size: 15px;
+}
+
+#btnStart,#btnreport{
+    font-size: 14px;
+    font-weight: bold;
+}
+#socialUsername{
+    font-size: 14px;
+}
+
+
+}
