--- a/app/templates/multipledata.html
+++ b/app/templates/multipledata.html
@@ -161,5 +161,10 @@
     {% else %}
     <div class="no-results">No users found. Please try again.</div>
     {% endif %}
+
+
+
+
+    <script type="module" src="{{ url_for('static', filename='js/wholeinsta.js')}}" type="image/x-icon"></script>
 </body>
 </html>
